
syntax = "proto2";

package mesop.components.slide_toggle;

message SlideToggleType {
  optional string label_position = 3;
  optional bool required = 7;
  optional string color = 8;
  optional bool disabled = 9;
  optional bool disable_ripple = 10;
  optional double tab_index = 11;
  optional bool checked = 12;
  optional bool hide_icon = 13;
  optional string on_slide_toggle_change_event_handler_id = 14;
}
